--- a/app/assets/stylesheets/index_as_calendar.scss
+++ b/app/assets/stylesheets/index_as_calendar.scss
@@ -1,2 +1,26 @@
+#fullCalendar {
+  // fc-basicDay-button
+  .fc-button {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+
+  }
+  // fc-state-default
+  .fc-state-default.fc-corner-left {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 200px;
+    border-bottom-left-radius: 200px;
+  }
+  .fc-state-default.fc-corner-right {
+    border-top-right-radius: 200px;
+    border-bottom-right-radius: 200px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+}
+
 @import "fullcalendar";
 @import "index_as_calendar/jquery.qtip.min";
